<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background_image"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_top_white"
        android:fontFamily="@font/montserratbold"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2/14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/question_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_top_white"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserratbold"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_typeicon"
        app:layout_constraintEnd_toEndOf="@+id/vertical_center_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Quiz" />

    <TextView
        android:id="@+id/choice_type_bar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:elevation="4dp"
        android:fontFamily="@font/montserratbold"
        android:gravity="center"
        android:outlineProvider="paddedBounds"
        android:shadowColor="@color/shadow_choice_result_text"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/correct_answer_background"
        tools:text="@string/correct" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/question_image"
        android:layout_width="wrap_content"
        android:layout_height="208dp"
        android:layout_marginVertical="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/question_image"
        android:paddingHorizontal="40dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_type"
        app:shapeAppearanceOverlay="@style/shapeableImageViewForPhotos"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="11dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_main_question_white"
        android:fontFamily="@font/montserratmedium"
        android:gravity="center"
        android:maxLines="2"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_image"
        tools:text="What is the capital of France?" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/choice_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/quiz_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:background="@drawable/background_continue_button"
        android:fontFamily="@font/montserratbold"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/black_grey"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_min="200dp" />

    <com.juancoob.kahootchallenge.common.CountdownProgressBarView
        android:id="@+id/remaining_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="19dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:time="20" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="11dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_main_question_white"
        android:fontFamily="@font/montserratmedium"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome to my game!" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_continue_button"
        android:fontFamily="@font/montserratbold"
        android:text="@string/play_again"
        android:textColor="@color/black_grey"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintWidth_min="200dp" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="11dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_main_question_white"
        android:fontFamily="@font/montserratmedium"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Something went wrong" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_continue_button"
        android:fontFamily="@font/montserratbold"
        android:text="@string/try_again"
        android:textColor="@color/black_grey"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text"
        app:layout_constraintWidth_min="200dp" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
